# watchpost

./: Cargo.toml  PROJECT.md  config.toml.example  watchpost.service
crates/watchpost-analyzer/: Cargo.toml
crates/watchpost-analyzer/src/: agent_loop.rs  backend.rs  client.rs  context_builder.rs  gate.rs  lib.rs  ollama.rs  rate_limiter.rs  skill.rs  tools.rs
crates/watchpost-collector/: Cargo.toml  build.rs
crates/watchpost-collector/src/: ancestry.rs  context.rs  flatpak.rs  grpc.rs  lib.rs  manifest.rs  proto.rs  provenance.rs
crates/watchpost-engine/: Cargo.toml
crates/watchpost-engine/src/: correlation.rs  feedback.rs  lib.rs  persistent.rs  profiles.rs  scoring.rs  tree.rs  triggers.rs  windows.rs
crates/watchpost-engine/tests/: phase2_integration.rs  phase3_integration.rs  pipeline_test.rs  scoring_scenarios.rs
crates/watchpost-notify/: Cargo.toml
crates/watchpost-notify/src/: dbus.rs  event_log.rs  lib.rs  webhook.rs
crates/watchpost-policy/: Cargo.toml
crates/watchpost-policy/src/: allowlist.rs  generator.rs  lib.rs  reconciler.rs  staged.rs
crates/watchpost-rules/: Cargo.toml
crates/watchpost-rules/src/: evaluator.rs  lib.rs  loader.rs
crates/watchpost-tui/: Cargo.toml
crates/watchpost-tui/src/: lib.rs  run.rs  ui.rs
crates/watchpost-types/: Cargo.toml
crates/watchpost-types/src/: config.rs  context.rs  correlation.rs  events.rs  lib.rs  policy.rs  profile.rs  provenance.rs  rules.rs  scoring.rs  util.rs  verdict.rs
docs/superpowers/plans/: 2026-04-01-invisible-guardian-ux.md  2026-04-01-watchpost-implementation.md
docs/superpowers/specs/: 2026-04-01-invisible-guardian-ux-design.md
policies/: cargo-monitoring.yaml  crypto-miner.yaml  dns-exfil.yaml  flatpak-escape.yaml  immutability.yaml  install-script-gate.yaml  npm-monitoring.yaml  pip-monitoring.yaml  priv-escalation.yaml  reverse-shell.yaml  sensitive-files.yaml  tmp-execution.yaml
profiles/: cargo.yaml  flatpak.yaml  npm.yaml  pip.yaml  system.yaml
rules/: network-rules.yaml  npm-rules.yaml  pip-rules.yaml  system-rules.yaml
skills/: analyzer.yaml  gate-analyzer.yaml
src/: cli.rs  daemon.rs  init.rs  main.rs  style.rs
templates/: minimal.yaml  systems-developer.yaml  web-developer.yaml
