[package]
name = "watchpost-analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
watchpost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
