[package]
name = "watchpost-engine"
version.workspace = true
edition.workspace = true

[dependencies]
watchpost-types.workspace = true
tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
