[package]
name = "watchpost-engine"
version.workspace = true
edition.workspace = true

[dependencies]
watchpost-types.workspace = true
tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_yml.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true

[dev-dependencies]
watchpost-rules.workspace = true
watchpost-collector.workspace = true
watchpost-analyzer.workspace = true
watchpost-policy.workspace = true
watchpost-tui.workspace = true
watchpost-notify.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
ratatui = "0.29"
chrono.workspace = true
uuid.workspace = true
