[package]
name = "watchpost-notify"
version.workspace = true
edition.workspace = true

[dependencies]
watchpost-types.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
zbus = "5"

[dev-dependencies]
tempfile = "3"
