[package]
name = "watchpost-rules"
version.workspace = true
edition.workspace = true

[dependencies]
watchpost-types.workspace = true
serde.workspace = true
serde_yml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
